# Velocity-Field

./: .gitignore  README.md  batch_cl_test.py  batch_ol_test.py  closed_loop_test.py  common_utils.py  config.yaml  config_base.yaml  config_baseline.yaml  config_dipp.yaml  config_esp.yaml  config_nmp.yaml  config_risk.yaml  data_process.py  environment.yml  loop.sh  open_loop_test.py  requiment.txt  start_train_test.sh  static_mul.py  statistic.py  train.py
model/: meter2risk.py  planner.py  predictor.py  predictor_base.py
training_log/DIPP/: train_log.csv
utils/: data_loading.py  data_utils.py  simulator.py  test_utils.py  train_utils.py
utils/data_augmentation/: abstract_data_augmentation.py  data_augmentation_util.py  gaussian_smooth_agent_augmentation.py  kinematic_agent_augmentation.py  kinematic_history_agent_augmentation.py  kinematic_history_generic_agent_augmentation.py  simple_agent_augmentation.py
utils/metrics/: covernet_loss.py  goal_pred_nll.py  min_ade.py  min_fde.py  miss_rate.py  mle_loss.py  mtp_loss.py  pi_bc.py  planning_loss.py  unlikelihood_gan_loss.py  unlikelihood_loss.py  utils.py  violation.py
utils/riskmap/: car.py  get_path.py  getloss.py  map.py  rm_utils.py  (+3 more)
utils/riskmap/mpp/lib/: .gitignore  CMakeLists.txt  wrapper.cc
utils/riskmap/mpp/lib/frenet/: box2d.cc  box2d.h  frenet_sampler.cc  frenet_sampler.h  frenet_trajectory.hpp  frenet_transform.cc  frenet_transform.h  polynomials.cc  polynomials.h  reference_line.cc  reference_line.h
utils/riskmap/mpp/lib/smoothing/: CMakeLists.txt  affine_constraint.cc  affine_constraint.h  discrete_points_math.cc  discrete_points_math.h  osqp_spline1d_solver.cc  osqp_spline1d_solver.h  osqp_spline2d_solver.cc  osqp_spline2d_solver.h  polynomialxd.cc  polynomialxd.h  spline1d.cc  spline1d.h  spline1d_constraint.cc  spline1d_constraint.h  spline1d_kernel.cc  spline1d_kernel.h  spline1d_kernel_helper.cc  spline1d_kernel_helper.h  spline1d_seg.cc  spline1d_seg.h  spline1d_solver.h  spline2d.cc  spline2d.h  spline2d_constraint.cc  spline2d_constraint.h  spline2d_kernel.cc  spline2d_kernel.h  spline2d_seg.cc  spline2d_seg.h  spline2d_solver.h
utils/riskmap/mpp/lib/solver/: CMakeLists.txt
utils/riskmap/mpp/lib/solver/osqp/: osqp_interface.cc  osqp_interface.h  osqp_sparse_matrix.h
utils/riskmap/mpp/lib/utils/: CMakeLists.txt  math.cc  math.h  stdout_color.h  timer.h  type.h
(+9 files in other folders)
